3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Implement feature request #1560396: flag to set fixed buying/selling prices.
Three keys are used, "price_adjustment", "price_adjustment_sell" and "price_adjustment_buy".
price_adjustment overrides the 2 other keys. Value should be numeric/decimal, anything that
atof() will recognize as a float.
 server/shop.c
Ryo 2007-03-05

Add Object.Owner (read/write) and Crossfire.GetFriendlyList.
 plugins/cfpython/include/cfpython_object_private.h
 plugins/cfpython/cfpython.c
 plugins/cfpython/cfpython_object.c
---
Add cf_friendlylist_get_first / cf_friendlylist_get_next to browser friendlylist.
Add cf_object_set_object_property.
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
---
Give access to friendlylist to plugins, through cfapi_friendlylist_get_next().
 include/sproto.h
 server/plugins.c
---
common/object.c: let set_owner accept owner NULL (-> clear_owner()).
---
Implement feature request #1669443: dmhide - players can still send 'tell.
server/c_chat.c: DM are now shown as not logger with regard to tell/reply.
---
server/c_object.c: call EVENT_PICKUP which was forgotten somewhere along the way.
server/plugins.c: don't remove/free removed/freed objects, log mistake. This closes
 bug #1670465: server doesn't have check to see if it is removing removed
Ryo 2007-03-04

Fix some potential / real crashes under Windows.
 common/readable.c: wrong field cleared. Set to NULL after clear. Wrong buffer size.
---
 socket/info.c: old_format is sometimes NULL, use new_format.
---
Fix a potential crash related to map swapping: swap_map can delete map.
 include/sproto.h
 server/c_wiz.c swap.c
Ryo 2007-03-03
